More synchronization cleanup.